--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "",
-  "version": "0.0.0",
+  "name": "@rickard.antonsson/ts-utility",
+  "version": "0.0.4",
   "description": "",
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
