--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,9 @@
   "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "build"
+    "outDir": "build",
+    "strictNullChecks": true
   },
-  "exclude": [
-    "src/**/*.test.ts",
-  ],
-  "include": [
-    "src/**/*.ts",
-  ]
+  "exclude": ["src/**/*.test.ts"],
+  "include": ["src/**/*.ts"]
 }
