--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
+    "@faker-js/faker": "^6.0.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^14.11.2",
     "babel-jest": "^27.4.2",
