--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "build",
+    "resolveJsonModule": true,
     "strictNullChecks": true
   },
   "exclude": ["src/**/*.test.ts"],
