--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -36,6 +36,6 @@ jobs:
         with:
           version: 8
       - run: pnpm i
-      - run: npm publish
+      - run: pnpm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: ${{secrets.RA_NPM_SECRET}}
