--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@rickard.antonsson/ts-utility",
-  "version": "1.0.4",
-  "description": "",
-  "main": "build/src/index.js",
-  "types": "build/src/index.d.ts",
+  "version": "2.0.0",
+  "description": "My favorite small helper functions",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "files": [
-    "build/src"
+    "build/**/*"
   ],
   "license": "Apache-2.0",
   "keywords": [],
@@ -25,10 +25,14 @@
     "@babel/preset-typescript": "^7.16.0",
     "@faker-js/faker": "^6.0.0",
     "@types/jest": "^27.0.3",
-    "@types/node": "^14.11.2",
+    "@types/node": "^22.5.4",
+    "@typescript-eslint/typescript-estree": "^8.7.0",
     "babel-jest": "^27.4.2",
     "gts": "^3.1.0",
     "jest": "^27.4.3",
-    "typescript": "^4.0.3"
+    "typescript": "~5.5.3"
+  },
+  "dependencies": {
+    "@rickard.antonsson/ts-utility": "file:"
   }
 }
